set test java to 25, remove deprecated usage
Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>